package switchtwentytwenty.project.domain.account;

import switchtwentytwenty.project.shared.AggregateRoot;

/**
 *
 */
public interface Account extends AggregateRoot {

}