package switchtwentytwenty.project.domain.aggregates.account;

import switchtwentytwenty.project.domain.valueobject.ID;

import java.util.UUID;
/*


public class CreditCardAccount implements NonCashAccount {

    private AccountData data;

    @Override
    public ID id() {
        return null;
    }

    @Override
    public boolean hasID(ID id) {
        return false;
    }
}
 */