package switchtwentytwenty.project.domain.aggregates.account;

import switchtwentytwenty.project.domain.valueobject.AccountID;

import java.util.UUID;

public interface NonCashAccount extends Account {


}